Fix: スライドショーコード　z-index

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ figure {
   max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
+  z-index: 1;
 }
 
 @media screen and (max-width: 768px) {
